--- a/app/views/targets/index.html.erb
+++ b/app/views/targets/index.html.erb
@@ -11,6 +11,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Downloads</th>
       <th>Reports</th>
       <th>&nbsp;</th>
     </tr>
@@ -20,6 +21,7 @@
       <tr>
         <td><%= target.name %></td>
         <td><%= link_to "Download Resume", target.attachment_url %></td>
+        <td><%= link_to "Report", target_path(target) %></td>
         <td><%= button_to "Delete",  target, method: :delete, class: "btn btn-danger", confirm: "Are you sure that you wish to delete #{target.name}?" %></td>
       </tr>
     <% end %>
