--- a/app/views/targets/new.html.erb
+++ b/app/views/targets/new.html.erb
@@ -42,10 +42,10 @@
       <%= f.number_field :network_fuzz, style: "display: none" %>
 
       <label>
-        <input type="checkbox" id="metaexploits_check" />
-        metaexploits
+        <input type="checkbox" id="metasploits_check" />
+        metasploits
       </label>
-      <%= f.number_field :metaexploits, style: "display: none" %>
+      <%= f.number_field :metasploits, style: "display: none" %>
 
       <div class="btn btn-info" id="exploit_save">
         Save analysis method
