--- a/app/views/targets/show.html.erb
+++ b/app/views/targets/show.html.erb
@@ -44,19 +44,19 @@
               <td>
                 <% if @target.afl == 100 %> 100
                 <% elsif @target.afl < 100 && @target.afl >= 0 %> Pending
-                <% else %><%= link_to "Not analyzing", "/targets/afl/#{@target.id}" %>
+                <% else %><%= link_to "more", "/targets/afl/#{@target.id}" %>
                 <% end %>
               </td>
               <td>
                 <% if @target.network_fuzz == 100 %> 100
                 <% elsif @target.network_fuzz < 100 && @target.network_fuzz >= 0 %> Pending
-                <% else %><%= link_to "Not analyzing", "/targets/network_fuzz/#{@target.id}" %>
+                <% else %><%= link_to "more", "/targets/network_fuzz/#{@target.id}" %>
                 <% end %>
               </td>
               <td>
                 <% if @target.metasploits == 100 %> 100
                 <% elsif @target.metasploits < 100 && @target.metasploits >= 0 %> Pending
-                <% else %><%= link_to "Not analyzing", "/targets/metasploits/#{@target.id}" %>
+                <% else %><%= link_to "more", "/targets/metasploits/#{@target.id}" %>
                 <% end %>
               </td>
 
