change the firmware downloads to the extracted fs

--- a/app/views/targets/index.html.erb
+++ b/app/views/targets/index.html.erb
@@ -11,7 +11,7 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Downloads</th>
+      <th>Extracted Filesystem</th>
       <th>Reports</th>
       <th>&nbsp;</th>
     </tr>
@@ -20,7 +20,7 @@
     <% @targets.each do |target| %>
       <tr>
         <td><%= target.name %></td>
-        <td><%= link_to "Download file", target.attachment_url %></td>
+        <td><%= link_to "Download", target.attachment_url %></td>
         <td><%= link_to "Report", target_path(target) %></td>
         <!--
         <td><%= button_to "Delete",  target, method: :delete, class: "btn btn-danger", confirm: "Are you sure that you wish to delete #{target.name}?" %></td>
