Update report form

--- a/app/views/targets/source_code.html.erb
+++ b/app/views/targets/source_code.html.erb
@@ -1,12 +1,27 @@
 </br>
 </br>
-<div class="well" id="source_target">
-  <p>
-  </p>
-</div>
+<% 
+    @file_list.each do |file_name| 
+      content=File.open(file_name)
+      show_name = file_name.slice! "#{@firmanal_path}"
+%>
+    <h4><%= file_name %></h4>
+    <div class="well" id="source_target">
+<% if content.include? "Hits =" %>
+      <% content.each_line do |line| %>
+        <p><%= line %></p>
+        <% end %>
+  <% else %>
+    <p> No hits </p>
+  <% end %>
+    </div>
+  <% end %>
 
-<script>
+  <!--
+    <script type="text/javascript">
+
 // Require filesystem package for IO operations
+console.log("hello")
 var fs = require('fs');
 // Put the path you are looking for here
 var path = "/home/eecs/firmanal/results/<%= @target.id %>/source";
@@ -24,7 +39,7 @@ recursiveloop(path, function(err,result){
     filename = filename.concat("</h3>");
     $("#source_target").append(filename);
 
-    //Read the file
+//Read the file
     fs.readFile(result[i], 'utf8', function(err, data){
       //If there is an error notify to the console
       if(err) console.log('Error: ' + err);
@@ -32,7 +47,7 @@ recursiveloop(path, function(err,result){
       $("#source_target").append("<p>");
       $("#source_target").append(content);
       $("#source_target").append("</p>");
-      
+
     })
   }
 
@@ -67,4 +82,5 @@ function recursiveloop(dir, done)
     })();
   });
 }
-</script>
+    </script>
+    -->
