--- a/app/views/targets/metasploits.html.erb
+++ b/app/views/targets/metasploits.html.erb
@@ -1,7 +1,14 @@
 </br>
 </br>
-<div class="well">
-  <p>
-<%= @target.metasploits_data %>
-  </p>
-</div>
+<% 
+    @file_list.each do |file_name| 
+      content=File.open(file_name)
+      show_name = file_name.slice! "#{@firmanal_path}"
+%>
+    <h4><%= file_name %></h4>
+    <div class="well" id="source_target">
+      <% content.each_line do |line| %>
+        <p><%= line %></p>
+        <% end %>
+    </div>
+  <% end %>
